# chatting-organs

./: README.md
_etc/: dialogue-pipeline.drawio  pipeline-flow.drawio  td.drawio  tts-alignment-pipeline.drawio
_etc/scenario_test/: complex-short.json
_tools/: .editorconfig  .gitignore  README.md  sound_test.scd  startup.scd  tool.pd  voices_test.scd
chatting-organs-pipeline/: .gitignore  CLAUDE.md  alignment.py  app_config.toml  app_config_en.toml  credit_generator.py  dialogue.py  direction.py  direction_prompt_example.txt  generate_credits.py  generate_schedule.py  generate_schedule_custom.py  image_search.py  main.py  models.py  pipeline.py  pipeline_utils.py  prompt_example.txt  pyproject.toml  retry_utils.py  tts.py  tweaks.py  validation.py
chatting-organs-td/: chatting-organs-td.toe  config.example.toml  credit.html  dispatcher.tox  imgManager.tox  schedule.example.json  tpl.html  tpl_alt.html
chatting-organs-td/Script/: ChattingOrgans.py  dat_datetime_task.py  dat_datexec.py  dat_oscin2_callbacks.py
