[project]
name = "chatting-organs-pipline"
version = "0.9.0"
description = "LLM-based pipeline process for Flying Organs"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
  "crewai[tools]>=1.9.3",
  "elevenlabs>=2.34.0",
  "google-genai>=1.62.0",
  "python-dotenv>=1.1.1",
  "python-osc>=1.9.3",
  "open-clip-torch>=3.2.0",
  "pillow>=12.1.1",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
  "transformers[sentencepiece]>=4.46.3",
  "polars>=1.38.1",
  "fastexcel>=0.19.0",
]
